--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,7 +80,8 @@ button {
   
 } */
 .alexa-heart {
-  height: 700px;
+  height: auto;
+  width: 500px;
 }
 .about-text {
   padding-left: 7%;
@@ -143,6 +144,9 @@ button {
   flex-direction: column;
   align-items: center;
 }
+.promo h4 {
+  color: #F6F1DF;
+}
 .promo-img {
   height: 5rem;
   width: 5rem;
@@ -152,7 +156,7 @@ button {
   flex-direction: column;
   align-items: flex-end;
   padding-right: 50px;
-  margin-top:400px;
+  margin-top:300px;
 }
 .essentials-text h3 {
   color: #F6F1DF;
@@ -161,4 +165,100 @@ button {
 }
 .essentials-text p {
   color: #F6F1DF;
+  padding-bottom: 50px;
+}
+
+.shop {
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+.shop-items {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap:50px;
+  padding-left: 10%;
+  padding-right: 10%;
+  /* margin-right: 5%;
+  margin-left: 5%; */
+}
+.single-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 5%;
+  /* margin-right: 5%;
+  margin-left: 5%; */
+}
+.single-item-img {
+  width: 100%;
+}
+.single-item-button {
+  width: 80%;
+  background-color: #F6F1DF;
+  color: black;
+  padding: 10px 24px;
+  border-radius: 0px;
+  border-color: black
+}
+.story-section {
+  background-color: #A7A376;
+}
+.story-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #A7A376;
+}
+.story-title h4 {
+  padding-top: 5%;
+}
+.story-title h1 {
+  padding: 20%;
+}
+.story p {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-right: 15%;
+  padding-left: 15%;
+  line-height: 2;
+}
+.story-images {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+.story-img {
+  width: 300px;
+}
+.story-cont {
+  display: flex;
+  padding: 5%;
+}
+.story-cont-img {
+  width: 50%;
+}
+.story-cont-p {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.story-cont-p p{
+  display: flex;
+  justify-content: center;
+
+  text-align: center;
+  /* padding-top: 5%;
+  padding-bottom: 5%; */
+  padding-right: 15%;
+  padding-left: 15%;
+  line-height: 2;
 }
