--- a/client/src/App.css
+++ b/client/src/App.css
@@ -704,4 +704,15 @@ input {
 .empty-bag button {
   width: 300px;
 }
+.product-entry-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.new-product-form {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  gap: 1rem;
+}
 
